force-app/main/default/objects/CommunicationLog__c/CommunicationLog__c.object-meta.xml
<CustomObject>
    <description>Oggetto di Log dei cambi di stato e fase degli oggetti Case e Order</description>
    <label>Log Comunicazioni</label>
    <nameField>
        <displayFormat>CML-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Comunicazioni</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>