force-app/main/default/objects/CommunicationLog__c/fields/CaseID__c.field-meta.xml
<CustomField>
    <fullName>CaseID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case Salesforce ID</description>
    <label>CaseID</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Log Comunicazioni</relationshipLabel>
    <relationshipName>LogComunicazioni</relationshipName>
    <type>Lookup</type>
</CustomField>