force-app/main/default/objects/CommunicationLog__c/fields/Causale__c.field-meta.xml
<CustomField>
    <fullName>Causale__c</fullName>
    <description>Causale presente sul Case/Order</description>
    <label>Causale</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>