force-app/main/default/objects/CommunicationLog__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <description>Nome del cluster di appartenenza del processo</description>
    <label>Cluster</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>