force-app/main/default/objects/CommunicationLog__c/fields/CompanyOwner__c.field-meta.xml
<CustomField>
    <fullName>CompanyOwner__c</fullName>
    <defaultValue>&apos;HERA COMM&apos;</defaultValue>
    <description>Valore del campo CompanyOwner del Case/Order</description>
    <label>CompanyOwner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>