force-app/main/default/objects/CommunicationLog__c/fields/ContactID__c.field-meta.xml
<CustomField>
    <fullName>ContactID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>ContactID del contatto cui il Case/Order è intestato</description>
    <label>ContactID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Log Comunicazioni</relationshipLabel>
    <relationshipName>LogComunicazioni</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>