force-app/main/default/objects/CommunicationLog__c/fields/OrderID__c.field-meta.xml
<CustomField>
    <fullName>OrderID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Order Salesforce ID</description>
    <label>OrderID</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Log Comunicazioni</relationshipLabel>
    <relationshipName>LogComunicazioni</relationshipName>
    <type>Lookup</type>
</CustomField>