force-app/main/default/objects/CommunicationLog__c/fields/Processo__c.field-meta.xml
<CustomField>
    <fullName>Processo__c</fullName>
    <description>Nome del processo</description>
    <label>Processo</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>